--- a/jdbc.properties
+++ b/jdbc.properties
@@ -1,3 +1,4 @@
+#ce fichier doit etre dans le même sous-repertoire que le Main()
 jdbc.url=jdbc:mysql://localhost:3306/gestionDeNotes?characterEncoding=utf8
 #user=gdn
 #password=passer
