--- a/jdbc.properties
+++ b/jdbc.properties
@@ -1,7 +1,5 @@
 #ce fichier doit etre dans le même sous-repertoire que le main()
 jdbc.url=jdbc:mysql://localhost:3306/gestionDeNotes?characterEncoding=utf8
-#user=gdn
-#password=passer
-jdbc.user=root
-jdbc.password=qsdfjklm
+jdbc.user=gdn
+jdbc.password=passer
 jdbc.driver=com.mysql.jdbc.Driver
